# vocab

./: .gitignore  API说明文档.md  schema.sql  单词本需求文档.md  复习模型调整记录.md  阶段一数据库验证记录.md  阶段三单词管理API记录.md  阶段二后端初始化记录.md  项目计划书.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  reviews.py  study_sessions.py  words.py
backend/app/core/: config.py  database.py
backend/app/repositories/: review_repository.py  session_repository.py  word_repository.py
backend/app/schemas/: review.py  session.py  word.py
backend/app/services/: errors.py  review_service.py  session_service.py  word_service.py
backend/tests/: test_health.py  test_review_schema.py  test_stage_four_routes.py  test_word_schema.py
